--- a/portfolio-details7.html
+++ b/portfolio-details7.html
@@ -62,7 +62,6 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-        </li>
       </ul>
     </nav>
 
@@ -136,16 +135,16 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Vorticity</li>
+                <li><strong>Course</strong>: Numerical Weather Prediction Method</li>
+                <li><strong>Project date</strong>: 30 Desember, 2024</li>
+                <li><strong>Project URL</strong>: <a href="#">Fortran and Grads</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
+              <h2>barotropic vorticity model over the Philippine region for Chebi Typhoon on November 9-11, 2006.</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Analysis of barotropic vorticity model over the Philippine region for Chebi Typhoon using FNL data.
               </p>
             </div>
           </div>
