--- a/portfolio-details8.html
+++ b/portfolio-details8.html
@@ -138,8 +138,8 @@
               <ul>
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Project date</strong>: 20 November, 2024</li>
+                <li><strong>Project URL</strong>: <a href="#">Fortran and Grads</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
