--- a/portfolio-details11.html
+++ b/portfolio-details11.html
@@ -134,16 +134,16 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Wind</li>
+                <li><strong>Course</strong>: Boundary Layer Meteorology</li>
+                <li><strong>Project date</strong>: 15 Desember, 2024</li>
+                <li><strong>Project URL</strong>: <a href="https://colab.research.google.com/drive/16c2og1j7tVX3twTAM_HOFwJEYU35OWp2?usp=sharing">www.wind.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
+              <h2>Flux measurements in the atmospheric boundary layer at ITB ganesa campus on november 25, 2024</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                flux analysis in window 3 for zonal, meridional, vertical winds and temperature using Ultrasonic Anemometer.
               </p>
             </div>
           </div>
