--- a/portfolio-details8.html
+++ b/portfolio-details8.html
@@ -136,16 +136,16 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
+                <li><strong>Category</strong>: Streamline</li>
+                <li><strong>Course</strong>: Numerical Weather Prediction Method</li>
                 <li><strong>Project date</strong>: 20 November, 2024</li>
                 <li><strong>Project URL</strong>: <a href="#">Fortran and Grads</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
+              <h2>Wind Field Analysis of Tropical Cyclone Huaning August 6, 2021</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Wind Field Analysis with Barotropic Vorticity Model using Finite Difference Method.
               </p>
             </div>
           </div>
