--- a/portfolio-details10.html
+++ b/portfolio-details10.html
@@ -135,16 +135,16 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Net Radiation</li>
+                <li><strong>Course</strong>: Atmospheric Radiation and Solar Energy</li>
+                <li><strong>Project date</strong>: 15 Desember, 2024</li>
+                <li><strong>Project URL</strong>: <a href="https://colab.research.google.com/drive/1ZCYtuFDrpoy03fxI5A4AJnXFZ9Q9lfLL?usp=sharing">www.netradiometer.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
+              <h2>Observation of Solar Radiation on the Rooftop Surface of ITB ganesa campus on 19-21 Novwmber 2024</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Analysis of Solar Radiation data from Net Radiometer.
               </p>
             </div>
           </div>
