--- a/index.html
+++ b/index.html
@@ -233,31 +233,100 @@
               <p>Faculty of Earth Science and Technology Undergraduate Student (Meteorology)</p>
             </div><!-- Edn Resume Item -->
 
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Campus Project</h3>
+            <h3 class="resume-title">Project Course Introduction to Satellite Meteorology</h3>
             <div class="resume-item">
-              <h4>Research on ENSO Influence on Precipitation and SST in Papua (1991-2021) </h4>
-              <h5>2025</h5>
+              <h4>Analyzed LST and NDVI Values to Identify and Compare the Phenomenon of Urban Heat Island (UHI) in Surabaya for 2019 and 2024</h4>
+              <h5>2024</h5>
               <p><em>Bandung, West Java, Indonesia </em></p>
               <ul>
-                <li>Modeled 30-year precipitation data using monthly datasets.</li>
-                <li>Diagnosed ENSO events based on SOI Index analysis. </li>
-                <li>Developed Pearson Correlation maps between SOI Index and seasonal precipitation.</li>
-                <li>Designed probability maps for La Niña and El Niño impacts on precipitation.</li>
-                <li>Analyzed SST patterns from Earth Null School for different ENSO phases.</li>
+                <li>Downloaded landsat-8 satellite imagery from USGS.</li>
+                <li>Computed and Mapped 2 LST and 2 NDVI maps in Surabaya using QGIS.</li>
+                <li>Compared and Analyzed maps of LST and NDVI in Surabaya in 2019 and 2024.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Barotropic Vorticity Model Analysis of Typhoon Chebi (2006)</h4>
+              <h4>Analyzed the Occurrence of Tropical Storm Trami on July 21st, 2024, using HSD and NetCDF data of Himawari-9 from JAXA</h4>
               <h5>2024</h5>
               <p><em>Bandung, West Java, Indonesia</em></p>
               <ul>
-                <li>Programmed finite difference and spectral methods for barotropic vorticity maps.</li>
-                <li>Generated 72 map plots from GFS and FNL data for Indonesia and the Philippines.</li>
-                <li>Conducted comparative analysis of vorticity evolution using different datasets.</li>
+                <li>Downloaded HSD and NetCDF data from JAXA.</li>
+                <li>Programmed Multiscene and Animation per 10 minutes of the Movement of Trami Tropical Storm using Python.</li>
+                <li>Modeled and Analyzed 6 Composite to identify the Phenomenon and Impact to Philippines and Vietnam</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Programmed DPR, GMI and IMERG radars data for Fani cyclone</h4>
+              <h5>2024</h5>
+              <p><em>Bandung, West Java, Indonesia</em></p>
+              <ul>
+                <li>Downloaded GPM orbit which coincides with the fani cyclone on May 1, 2019.</li>
+                <li>Created programs and model plots for DPR, GMI, and IMERG data at a certain time.</li>
+                <li>Analyzed the results of processing DPR, GMI and IMERG radars case studies of fani cyclone.</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <h3 class="resume-title">Project Course Tropical Meteorology</h3>
+            <div class="resume-item">
+              <h4>Researched and Analyzed The Effect of ENSO Activity on Precipitate Patterns and Sea Surface Temperature (SST) in the Papua Island Region over A Thirty-Year Period (1991-2021)</h4>
+              <h5>2025</h5>
+              <p><em>Bandung, West Java, Indonesia </em></p>
+              <ul>
+                <li>Computed and Modeled Precipitation of 30-year-old data using monthly precipitation.</li>
+                <li>Identified and Diagnosed ENSO Phenomenon derived from 30-year-old data in Papua Island using SOI Index.</li>
+                <li>Computed, Designed and Modeled maps of Pearson Correlation between SOI Index and 30-year Precipitation, which was grouped every 4 Seasons.</li>
+                <li>Designed maps of probability above normal Precipitation during La Nina and below normal precipitation during El Nino.</li>
+                <li>Analyzed SST from earth null school for 3 Phases of ENSO from 1991-2021.</li>
+              
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>The influenced of monsoon phenomena on the variability of precipitation in Kalimantan Island during 30 years (1991-2021).</h4>
+              <h5>2024</h5>
+              <p><em>Bandung, West Java, Indonesia</em></p>
+              <ul>
+                <li>Computed monthly Precipitation from 1991-2021 in Kalimantan.</li>
+                <li>Modeled plot graph Evolution of AUSMI with rainfall from 1991-2021.</li>
+                <li>Program pearson correlation of AUSMI with precipitation anomalies for four seasons.</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+          </div>
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <h3 class="resume-title">Project Course Atmospheric Radiation and Solar Energy</h3>
+            <div class="resume-item">
+              <h4>Observed Solar Radiation at Ganesha Campus Bandung Institute of Technology during 19th -21st November 2024 – Analyzed Solar Radiation Data using Net Radiometer.</h4>
+              <h5>2024</h5>
+              <p><em>Bandung, West Java, Indonesia </em></p>
+              <ul>
+                <li>Operated a Net Radiometer to measure Net Radiation and Compute Solar Radiation Data.</li>
+                <li>Computed the cost to set Solar Rooftop System. </li>
+                <li>Forecasted and Analyzed the amount of Solar Radiation Potential for optimizing Solar Rooftop System.</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Processed DHI, DNI, GHI data and Solar Zenith Angle of Padang city in 2019.</h4>
+              <h5>2024</h5>
+              <p><em>Bandung, West Java, Indonesia</em></p>
+              <ul>
+                <li>Download 1-year (hourly) radiation data for the city of Padang in 2019 from NREL.</li>
+                <li>Create various heatmap plot programs for DHI, DNI, GHI and Solar Zenith Angle indexes .</li>
+                <li>Analyzed of the relationship between solar zenith angle and DHI, DNI and GHI indixes.</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Processed GHI and Solar Zenith Angle of Sydney in 2019.</h4>
+              <h5>2024</h5>
+              <p><em>Bandung, West Java, Indonesia </em></p>
+              <ul>
+                <li>Download 1-year (hourly) radiation data for the city of Sydney in 2019 from NREL.</li>
+                <li>Create various heatmap plot and corelation GHI and Solar Zenith Angle indexes. </li>
+                <li>Analyzed of the relationship between solar zenith angle and GHI indixes.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
