--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Shofiyyah</h2>
-        <p>I'm <span class="typed" data-typed-items="Meteorology Student, Meteorologist, Climate Scientist">Climatologist</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm <span class="typed" data-typed-items="Meteorology Student, Meteorologist, Climate Enthusiast">Climatologist</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -98,7 +98,7 @@
             <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>Climatologist &amp; Sustainable Energy Researcher</h2>
+            <h2>Student of Climate Change &amp; Renewable Energy</h2>
             <p class="fst-italic py-3">
               
             </p>
@@ -233,7 +233,7 @@
               <p>Faculty of Earth Science and Technology Undergraduate Student (Meteorology)</p>
             </div><!-- Edn Resume Item -->
 
-            <h3 class="resume-title">Project Course Introduction to Satellite Meteorology</h3>
+            <h3 class="resume-title">Project Course of Introduction to Satellite Meteorology</h3>
             <div class="resume-item">
               <h4>Analyzed LST and NDVI Values to Identify and Compare the Phenomenon of Urban Heat Island (UHI) in Surabaya for 2019 and 2024</h4>
               <h5>2024</h5>
@@ -267,7 +267,7 @@
               </ul>
             </div><!-- Edn Resume Item -->
 
-            <h3 class="resume-title">Project Course Tropical Meteorology</h3>
+            <h3 class="resume-title">Project Course of Tropical Meteorology</h3>
             <div class="resume-item">
               <h4>Researched and Analyzed The Effect of ENSO Activity on Precipitate Patterns and Sea Surface Temperature (SST) in the Papua Island Region over A Thirty-Year Period (1991-2021)</h4>
               <h5>2025</h5>
@@ -289,14 +289,14 @@
               <ul>
                 <li>Computed monthly Precipitation from 1991-2021 in Kalimantan.</li>
                 <li>Modeled plot graph Evolution of AUSMI with rainfall from 1991-2021.</li>
-                <li>Program pearson correlation of AUSMI with precipitation anomalies for four seasons.</li>
+                <li>Programmed pearson correlation of AUSMI with precipitation anomalies for four seasons.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Project Course Atmospheric Radiation and Solar Energy</h3>
+            <h3 class="resume-title">Project Course of Atmospheric Radiation and Solar Energy</h3>
             <div class="resume-item">
               <h4>Observed Solar Radiation at Ganesha Campus Bandung Institute of Technology during 19th -21st November 2024 – Analyzed Solar Radiation Data using Net Radiometer.</h4>
               <h5>2024</h5>
@@ -313,8 +313,8 @@
               <h5>2024</h5>
               <p><em>Bandung, West Java, Indonesia</em></p>
               <ul>
-                <li>Download 1-year (hourly) radiation data for the city of Padang in 2019 from NREL.</li>
-                <li>Create various heatmap plot programs for DHI, DNI, GHI and Solar Zenith Angle indexes .</li>
+                <li>Downloaded 1-year (hourly) radiation data for the city of Padang in 2019 from NREL.</li>
+                <li>Created various heatmap plot programs for DHI, DNI, GHI and Solar Zenith Angle indexes .</li>
                 <li>Analyzed of the relationship between solar zenith angle and DHI, DNI and GHI indixes.</li>
               </ul>
             </div><!-- Edn Resume Item -->
@@ -324,9 +324,58 @@
               <h5>2024</h5>
               <p><em>Bandung, West Java, Indonesia </em></p>
               <ul>
-                <li>Download 1-year (hourly) radiation data for the city of Sydney in 2019 from NREL.</li>
-                <li>Create various heatmap plot and corelation GHI and Solar Zenith Angle indexes. </li>
+                <li>Downloaded 1-year (hourly) radiation data for the city of Sydney in 2019 from NREL.</li>
+                <li>Created various heatmap plot and corelation GHI and Solar Zenith Angle indexes. </li>
                 <li>Analyzed of the relationship between solar zenith angle and GHI indixes.</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <h3 class="resume-title">Project Course of Boundary Layer Meteorology</h3>
+            <div class="resume-item">
+              <h4>ANALYSIS AND MEASUREMENT OF FLUXES AT THE ATMOSPHERIC BOUNDARY. Case Study: Rooftop ITB on November 25th 2024.</h4>
+              <h5>2024</h5>
+              <p><em>Bandung, West Java, Indonesia </em></p>
+              <ul>
+                <li>Operated ultrasonic anemometer for 2 hours to obtain the zonal, meridional, and vertical wind flux profiles and temperatures.</li>
+                <li>Programmed and Computed zonal, meridional, vertical wind and temperature time series data </li>
+                <li>Analyzed flux measurements at the atmospheric boundary layer of the ITB rooftop air conditioner.</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <h3 class="resume-title">Project Course of Numerical Weather Prediction Method</h3>
+            <div class="resume-item">
+              <h4>Modeled and Analyzed of Barotropic Vorticity Model in Indonesia and Philippines per 6 hours 
+                from November 9th – 11th 2006 Chebi Typhoon Event in the South China Sea using GFS and 
+                FNL data .</h4>
+              <h5>2024</h5>
+              <p><em>Bandung, West Java, Indonesia </em></p>
+              <ul>
+                <li>Programmed of Finite Difference and Spectral method of Barotropic Vorticity maps for Indonesia and Philippines.</li>
+                <li>Modeled Finite Difference and Spectral method maps with 72 map plots for Indonesia and Philippines.</li>
+                <li>Compared and Analyzed GFS and FNL data with 72 map plots in Indonesia and Philippines per 6 hours.</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Analysis of the Huaning Tropical Cyclone August 6, 2021 with a Barotropic Vorticity Model using the Finite Difference Method.</h4>
+              <h5>2024</h5>
+              <p><em>Bandung, West Java, Indonesia </em></p>
+              <ul>
+                <li>Programmed wind field evolution plot to find the center of high/low pressure using Fortran and grads.</li>
+                <li>Remodeled the previous program by adding the vorticity variable.</li>
+                <li>Analyzed wind field evolution overlaid with wind speed and vorticity.</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <h3 class="resume-title">Project Course of  Statistical Meteorology</h3>
+            <div class="resume-item">
+              <h4>Analyzed rainfall response to El-Nino events in each season in Indonesia for 63 years (1950-2013).</h4>
+              <h5>2024</h5>
+              <p><em>Bandung, West Java, Indonesia </em></p>
+              <ul>
+                <li>Programmed GPCC data based on the seasons.</li>
+                <li>Grouped EL Nino events based on the SOI index.</li>
+                <li>Analyzed rainfall response to EL-Nino based on the SOI Index for all seasons.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
