--- a/index.html
+++ b/index.html
@@ -402,10 +402,12 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">Satelite</li>
-            <li data-filter=".filter-product">Wind</li>
-            <li data-filter=".filter-branding">Map</li>
+            <li data-filter=".filter-app">Satellite</li>
+            <li data-filter=".filter-product">Tropical</li>
+            <li data-filter=".filter-branding">Statistical</li>
             <li data-filter=".filter-books">Radiation</li>
+            <li data-filter=".filter-temperature">Numerical</li>
+            <li data-filter=".filter-humidity">Boundary Layer</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -422,7 +424,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app4.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -470,7 +472,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-temperature">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app7.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -482,7 +484,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-temperature">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app8.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -518,7 +520,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app12.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -530,7 +532,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-humidity">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product11.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
